samples/_failures_safe/1761611526_126f72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27989b83.c: In function ‘main’:
./samples/SAFE/__tmp_27989b83.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_27989b83.c:163:9: error: expected declaration or statement at end of input
